dist/1.0/bin/sample/retrieveUnpackaged/objects/SFDC_Costing_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capex_Network__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Capex Network</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Capex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reusable_deinstalation__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Capex Reusable(deinstalation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Capex Reuseable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CategoryPC__c</fullName>
        <label>CategoryPC</label>
        <picklist>
            <picklistValues>
                <fullName>Radio Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LL inst/mont</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Location__c</fullName>
        <label>Country Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-net</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_time_weeks__c</fullName>
        <label>Delivery time [weeks]</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsShared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsShared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Klient_Capex_One_time_Cur__c</fullName>
        <label>Klient Capex One-time Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Capex_One_time__c</fullName>
        <label>Klient Capex One-time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Capex_Reusuable_Cur__c</fullName>
        <label>Klient Capex Reusuable Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Capex_Reusuable__c</fullName>
        <label>Klient Capex Reusuable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Opex_Monthly_Cur__c</fullName>
        <label>Klient Opex Monthly Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Opex_Monthly__c</fullName>
        <label>Klient Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Opex_Old_Monthly_Cur__c</fullName>
        <label>Klient Opex Old Monthly Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Opex_Old_Monthly__c</fullName>
        <label>Klient Opex Old Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Opex_One_Off_Cur__c</fullName>
        <label>Klient Opex One-Off Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Opex_One_Off__c</fullName>
        <label>Klient Opex One-Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Reusuable_Capex_deinstalation_Cur__c</fullName>
        <label>Klient Reusuable Capex deinstalation Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Klient_Reusuable_Capex_deinstalation__c</fullName>
        <label>Klient Reusuable Capex deinstalation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Capex_One_time_Cur__c</fullName>
        <label>Network Capex One-time Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Capex_One_time__c</fullName>
        <label>Network Capex One-time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Capex_Reusuable_Cur__c</fullName>
        <label>Network Capex Reusuable Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Capex_Reusuable__c</fullName>
        <label>Network Capex Reusuable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Opex_Monthly_Cur__c</fullName>
        <label>Network Opex Monthly Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Opex_Monthly__c</fullName>
        <label>Network Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Opex_Old_Monthly_Cur__c</fullName>
        <label>Network Opex Old Monthly Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Opex_Old_Monthly__c</fullName>
        <label>Network Opex Old Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Opex_One_Off_Cur__c</fullName>
        <label>Network Opex One-Off Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Opex_One_Off__c</fullName>
        <label>Network Opex One-Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Reusuable_Capex_deinstalationCur__c</fullName>
        <label>Network Reusuable Capex deinstalationCur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Reusuable_Capex_deinstalation__c</fullName>
        <label>Network Reusuable Capex deinstalation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Old_Monthly__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Opex Old Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Opex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Line_in_Calculation__c</fullName>
        <label>Order Line in Calculation</label>
        <referenceTo>Order_Line_in_Calculation__c</referenceTo>
        <relationshipLabel>SFDC Costing Items</relationshipLabel>
        <relationshipName>SFDC_Costing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Calculation__c</fullName>
        <label>SFDC Calculation</label>
        <referenceTo>SFDC_Calculation__c</referenceTo>
        <relationshipLabel>SFDC Costing Items</relationshipLabel>
        <relationshipName>SFDC_Costing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SharedCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SharedCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SFDC Costing Items</relationshipLabel>
        <relationshipName>SFDC_Costing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Costing Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Klient_Capex_One_time__c</columns>
        <columns>Klient_Capex_Reusuable__c</columns>
        <columns>Klient_Opex_Monthly__c</columns>
        <columns>Klient_Opex_Old_Monthly__c</columns>
        <columns>Klient_Opex_One_Off__c</columns>
        <columns>Network_Capex_One_time__c</columns>
        <columns>Network_Capex_Reusuable__c</columns>
        <columns>Network_Opex_Monthly__c</columns>
        <columns>Network_Opex_Old_Monthly__c</columns>
        <columns>Network_Opex_One_Off__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCI-{0000000000}</displayFormat>
        <label>SFDC Costing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Costing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Currency_not_null</fullName>
        <active>true</active>
        <description>ISPICKVAL( Currency__c , &apos;&apos;)</description>
        <errorConditionFormula>ISPICKVAL( CurrencyIsoCode , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>You have to choose a currency value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Name__c )</errorConditionFormula>
        <errorDisplayField>Name__c</errorDisplayField>
        <errorMessage>You must enter a Name value</errorMessage>
    </validationRules>
</CustomObject>